# ChatServer

./: CMakeLists.txt  README.md
include/: message.h
include/server/: chatserver.h  chatservice.h
include/server/db/: mysqlconnectionpool.h  mysqldb.h  redis.h
include/server/model/: friend.h  friendmodel.h  group.h  groupmodel.h  groupuser.h  offlinemessage.h  offlinemessagemodel.h  user.h  usermodel.h
src/: Makefile  cmake_install.cmake
src/client/: Makefile  cmake_install.cmake  main.cpp
src/server/: CMakeLists.txt  Makefile  chatserver.cpp  chatservice.cpp  cmake_install.cmake  main.cpp
src/server/db/: mysqlconnectionpool.cpp  mysqldb.cpp  redis.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
